--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "styled-components": "^3.4.10",
+    "sweetalert2": "^7.28.4"
   },
   "scripts": {
     "start": "react-scripts start",
